# insa-4ir-ai-lab3-template

./: Cargo.toml  README.md
src/: board.rs  engine.rs  main.rs  mcts.rs  minimax.rs
